load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["base_fee_cache.go"],
    importpath = "github.com/prysmaticlabs/prysm/v3/beacon-chain/cache/basefeecache",
    visibility = ["//visibility:public"],
    deps = ["@io_opencensus_go//trace:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["base_fee_cache_test.go"],
    embed = [":go_default_library"],
    deps = ["//testing/require:go_default_library"],
)
